# PythonTemplate

./: .gitignore  README.md  how_to_install_pdm.md  pyproject.toml  setup.py
docs/: create_how_to_install_pdm.sh  create_readme_badges.py  custom_hooks.py  download_icons.sh  mkdocs.yaml  pypi.md
docs/include/: abbreviations.md  example.py
docs/src/: contributing.md  examples.md  how_to_install_pdm.md  how_to_use.md  structure.md
docs/src/features/: debugging.md  dependencies.md  index.md
project_template/: __init__.py  __main__.py  cli.py  core.py
scripts/: pyproject.toml
scripts/pdm_plugins/: __init__.py  backend.py  frontend.py
scripts/tools/: create_how_to_install_pdm_instructions.sh
src/: __main__.py  cli.py
tests/: __init__.py  core_tests.py
